--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Days Until Event</title>
+  <title>EventDays</title>
   <style>
     * {
       box-sizing: border-box;
@@ -78,7 +78,7 @@
 </head>
 <body>
   <div class="container">
-    <h2>Days Until Your Event</h2>
+    <h2>EventDays...</h2>
     <input type="date" id="eventDate">
     <button onclick="findDays()">Find Days</button>
     <p id="result"></p>
